--- a/src/main/resources/templates/instructorDashboard/course.html
+++ b/src/main/resources/templates/instructorDashboard/course.html
@@ -75,16 +75,26 @@
                                     <td th:utext="${course.totalLessons}"></td>
                                     <td th:utext="${course.createdAt}"></td>
                                     <td>
-                                        <button class="btn btn-info btn-action" title="View">
+                                        <!-- View Lessons -->
+                                        <a th:href="@{'/instructordashboard/viewcourse/' + ${course.courseId} + '/lessons'}"
+                                           class="btn btn-info btn-action" title="View Lessons">
                                             <i class="fas fa-eye"></i>
-                                        </button>
-                                        <button class="btn btn-warning btn-action" title="Edit">
+                                        </a>
+
+                                        <!-- Edit Course -->
+                                        <a th:href="@{'/instructordashboard/viewcourse/edit/' + ${course.courseId}}"
+                                           class="btn btn-warning btn-action" title="Edit">
                                             <i class="fas fa-edit"></i>
-                                        </button>
-                                        <button class="btn btn-danger btn-action" title="Delete">
+                                        </a>
+
+                                        <!-- Delete Course -->
+                                        <a th:href="@{'/instructordashboard/viewcourse/delete/' + ${course.courseId}}"
+                                           class="btn btn-danger btn-action" title="Delete"
+                                           onclick="return confirm('Are you sure you want to delete this course?');">
                                             <i class="fas fa-trash"></i>
-                                        </button>
+                                        </a>
                                     </td>
+
                                 </tr>
                                 </tbody>
                             </table>
