--- a/src/main/resources/templates/instructorDashboard/fragments/sidebar.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/sidebar.html
@@ -1,64 +1,80 @@
-<div th:fragment="sidebar">
-    <ul  class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+<ul th:fragment="sidebar" class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-        <!-- Sidebar - Brand -->
-        <a class="sidebar-brand d-flex align-items-center justify-content-center" th:href="@{/instructordashboard}">
-            <div class="sidebar-brand-icon rotate-n-15">
-                <i class="fas fa-laugh-wink"></i>
-            </div>
-            <div class="sidebar-brand-text mx-3">Instructor</div>
+    <!-- Sidebar - Brand -->
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" th:href="@{/instructordashboard}">
+        <div class="sidebar-brand-icon rotate-n-15">
+            <i class="fas fa-laugh-wink"></i>
+        </div>
+        <div class="sidebar-brand-text mx-3">instructor</div>
+    </a>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider my-0">
+
+    <!-- Nav Item - Dashboard -->
+    <li class="nav-item active">
+        <a class="nav-link" th:href="@{/instructordashboard}">
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>Dashboard</span></a>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider">
+
+    <!-- Heading -->
+    <div class="sidebar-heading">
+        Manage
+    </div>
+
+    <!-- Nav Item - Pages Collapse Menu -->
+    <!-- Nav Item - Accounts -->
+<!--    <li class="nav-item">-->
+<!--        <a class="nav-link" th:href="@{/instructordashboard/viewcourse}">-->
+<!--            <i class="fas fa-fw fa-user"></i>-->
+<!--            <span>Accounts</span>-->
+<!--        </a>-->
+<!--    </li>-->
+
+    <!-- Nav Item - Courses -->
+    <li class="nav-item">
+        <a class="nav-link" th:href="@{/instructordashboard/viewcourse}">
+            <i class="fas fa-fw fa-trophy"></i>
+            <span>Courses</span>
         </a>
+    </li>
 
-        <!-- Divider -->
-        <hr class="sidebar-divider my-0">
+    <!-- Nav Item - Orders & Payments -->
+    <li class="nav-item">
+        <a class="nav-link" th:href="@{/instructordashboard/orders}">
+            <i class="fas fa-fw fa-credit-card"></i>
+            <span>Orders & Payments</span>
+        </a>
+    </li>
 
-        <!-- Nav Item - Dashboard -->
-        <li class="nav-item active">
-            <a class="nav-link" th:href="@{/instructordashboard}">
-                <i class="fas fa-fw fa-tachometer-alt"></i>
-                <span>Dashboard</span></a>
-        </li>
+    <!-- Nav Item - Packages -->
+    <li class="nav-item">
+        <a class="nav-link" th:href="@{/instructordashboard/packages}">
+            <i class="fas fa-fw fa-receipt"></i>
+            <span>Packages</span>
+        </a>
+    </li>
 
-        <!-- Divider -->
-        <hr class="sidebar-divider">
+    <!-- Nav Item - BuyPackages -->
+    <li class="nav-item">
+        <a class="nav-link" th:href="@{/instructordashboard/buyPackages}">
+            <i class="fas fa-fw fa-clock"></i>
+            <span>BuyPackages</span>
+        </a>
+    </li>
 
-        <!-- Heading -->
-        <div class="sidebar-heading">
-            Course Management
-        </div>
+    </li>
+    <!-- Divider -->
+    <hr class="sidebar-divider">
 
-        <!-- Nav Item - Pages Collapse Menu -->
+    <!-- Sidebar Toggler (Sidebar) -->
+    <div class="text-center d-none d-md-inline">
+        <button class="rounded-circle border-0" id="sidebarToggle"></button>
+    </div>
 
-        <!-- Nav Item - Utilities Collapse Menu -->
-        <li class="nav-item">
-            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-               aria-expanded="true" aria-controls="collapseUtilities">
-                <i class="fas fa-fw fa-trophy"></i>
-                <span>Course</span>
-            </a>
-            <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                 data-parent="#accordionSidebar">
-                <div class="bg-white py-2 collapse-inner rounded">
-                    <h6 class="collapse-header">Custom Course:</h6>
-                    <a class="collapse-item" th:href="@{/instructordashboard/viewcourse}">My Course</a>
-                    <a class="collapse-item" href="utilities-border.html">Orders & Payments</a>
-                    <a class="collapse-item" href="utilities-animation.html">Analytics & Reports</a>
-                    <a class="collapse-item" href="utilities-other.html">Review & FeedBack</a>
-                    <a class="collapse-item" href="utilities-other.html">Quiz</a>
-                </div>
-            </div>
-        </li>
 
-        <!-- Divider -->
-        <hr class="sidebar-divider">
-
-        <!-- Sidebar Toggler (Sidebar) -->
-        <div class="text-center d-none d-md-inline">
-            <button class="rounded-circle border-0" id="sidebarToggle"></button>
-        </div>
-
-        <!-- Sidebar Message -->
-
-    </ul>
-
-</div>
+</ul>
