--- a/src/main/resources/templates/instructorDashboard/index.html
+++ b/src/main/resources/templates/instructorDashboard/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html xmlns:th="http://www.thymeleaf.org">
 <div th:replace="instructorDashboard/fragments/header :: header"></div>
 
 <body id="page-top">
