--- a/src/main/resources/templates/adminDashBoard/fragments/topbar.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/topbar.html
@@ -170,7 +170,7 @@
         <li class="nav-item dropdown no-arrow" sec:authorize="isAuthenticated()">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small" sec:authentication="name">Douglas McGee</span>
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small" th:text="${#authentication.principal.email}">Douglas McGee</span>
                 <img class="img-profile rounded-circle" th:src="@{/img/undraw_profile.svg}">
             </a>
             <!-- Dropdown - User Information -->
