--- a/src/main/resources/templates/instructorDashboard/fragments/sidebar.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/sidebar.html
@@ -42,7 +42,12 @@
             <span>Courses</span>
         </a>
     </li>
-
+    <li class="nav-item">
+        <a class="nav-link" th:href="@{/instructordashboard/notifications}">
+            <i class="fas fa-fw fa-trophy"></i>
+            <span>notifications</span>
+        </a>
+    </li>
     <!-- Nav Item - Orders & Payments -->
     <li class="nav-item">
         <a class="nav-link" th:href="@{/instructordashboard/orders}">
