update draft next

--- a/src/main/resources/templates/instructorDashboard/CreateCourseStep1.html
+++ b/src/main/resources/templates/instructorDashboard/CreateCourseStep1.html
@@ -61,6 +61,7 @@
                                 <div class="row mb-3">
                                     <div class="col-12">
                                         <div class="form-floating">
+                                            <input type="hidden" th:field="*{id}" >
                                             <input type="text" class="form-control" th:field="*{title}" id="courseTitle"
                                                    placeholder="Course Title" required>
                                             <label for="courseTitle">Course Title *</label>
