update register account

--- a/src/main/resources/templates/homePage/home.html
+++ b/src/main/resources/templates/homePage/home.html
@@ -49,25 +49,23 @@
                                     3
                                 </span>
                         </a>
-                        <div class="dropdown">
-                            <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="https://placehold.co/32x32" alt="User" width="32" height="32" class="rounded-circle me-2">
-                                <span>John Doe</span>
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-                                <li><a class="dropdown-item" href="profile.html">Profile</a></li>
-                                <li><a class="dropdown-item" href="my-courses.html">My Courses</a></li>
-                                <li><a class="dropdown-item" href="wishList.html">Wishlist</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Sign out</a></li>
-                            </ul>
-                        </div>
+<!--                        <div class="dropdown">-->
+<!--                            <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">-->
+<!--                                <img src="https://placehold.co/32x32" alt="User" width="32" height="32" class="rounded-circle me-2">-->
+<!--                                <span>John Doe</span>-->
+<!--                            </a>-->
+<!--                            <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">-->
+<!--                                <li><a class="dropdown-item" href="profile.html">Profile</a></li>-->
+<!--                                <li><a class="dropdown-item" href="my-courses.html">My Courses</a></li>-->
+<!--                                <li><a class="dropdown-item" href="wishList.html">Wishlist</a></li>-->
+<!--                                <li><hr class="dropdown-divider"></li>-->
+<!--                                <li><a class="dropdown-item" href="#">Sign out</a></li>-->
+<!--                            </ul>-->
+<!--                        </div>-->
 
-                        <!-- Uncomment this for non-logged in users
-                        <button class="btn btn-outline-light rounded-pill px-4 me-2" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
-                        <button class="btn btn-primary rounded-pill px-4" data-bs-toggle="modal" data-bs-target="#signupModal">Sign Up</button>
-                        -->
-                        <a th:href="@{/login}">Login</a>
+                        <!-- Uncomment this for non-logged in users-->
+                        <a class="btn btn-outline-light rounded-pill px-4 me-2" th:href="@{/login}">Login</a>
+                        <a class="btn btn-primary rounded-pill px-4" th:href="@{/register}">Sign Up</a>
                     </div>
                 </div>
             </div>
