--- a/src/main/resources/templates/adminDashBoard/fragments/sidebar.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/sidebar.html
@@ -53,17 +53,9 @@
 
         <!-- Nav Item - Packages -->
         <li class="nav-item">
-            <a class="nav-link" th:href="@{/admin/packages}">
+            <a class="nav-link" th:href="@{/admin/courseMaintenance}">
                 <i class="fas fa-fw fa-receipt"></i>
-                <span>Packages</span>
-            </a>
-        </li>
-
-        <!-- Nav Item - BuyPackages -->
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/admin/buyPackages}">
-                <i class="fas fa-fw fa-clock"></i>
-                <span>BuyPackages</span>
+                <span>CourseMaintenance</span>
             </a>
         </li>
 
