--- a/src/main/resources/templates/adminDashBoard/fragments/ordersContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/ordersContent.html
@@ -1,57 +1,47 @@
-<div id="content" th:fragment="contentOrders">
-  <div class="container-fluid">
+<div id="content" class="container-fluid" th:fragment="contentOrders">
+  <div class="table-responsive">
     <div class="table-wrapper">
-      <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
-            th:action="@{/admin/orders/searchByUsername}" method="get">
-        <div class="input-group">
-          <input type="text" class="form-control bg-light border-0 small" name="username" th:value="${username}" placeholder="Enter username"/>
-          <div class="input-group-append">
-            <button class="btn btn-dark" type="submit">
-              <i class="fas fa-search fa-sm"></i>
-            </button>
+      <div class="table-title">
+          <div class="row">
+            <div class="col-md-6">
+              <h2 th:text="${accNamePage}">Management <b>Order</b></h2>
+            </div>
+            <div class="col-md-4">
+              <form th:action="@{/admin/orders/searchByUsername}" method="get">
+                <div class="search-box mt-2">
+                  <i class="material-icons">&#xE8B6;</i>
+                  <input type="text" class="form-control" name="username" th:value="${username}" placeholder="Search by username…"/>
+                </div>
+              </form>
+            </div>
+            <div class="col-md-2">
+              <form th:action="@{/admin/orders/searchByCourseName}" method="get">
+                <div class="search-box mt-2">
+                  <i class="material-icons">&#xE8B6;</i>
+                  <input type="text" name="courseName" class="form-control" placeholder="Search by course name…" th:value="${courseName}">
+                </div>
+              </form>
+            </div>
           </div>
-        </div>
-      </form>
-
-      <!-- Form tìm kiếm theo Status -->
-      <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
-            th:action="@{/admin/orders/searchByCourseName}" method="get">
-        <div class="input-group">
-          <input type="text" class="form-control bg-light border-0 small" name="courseName" th:value="${courseName}" placeholder="Enter course name"/>
-          <div class="input-group-append">
-            <button class="btn btn-dark" type="submit">
-              <i class="fas fa-search fa-sm"></i>
-            </button>
+          <div class="col-md-6 d-flex gap-2 mt-4">
+            <form class="p-1" th:action="@{/admin/orders/sortByAmount}" method="get">
+              <select  class="form-control" name="direction" onchange="this.form.submit()">
+                <option value="all" th:selected="${amountDirection == 'all'}">All Amounts</option>
+                <option value="asc" th:selected="${amountDirection == 'asc'}">Low to High</option>
+                <option value="desc" th:selected="${amountDirection == 'desc'}">High to Low</option>
+              </select>
+            </form>
+            <form class="p-1" th:action="@{/admin/orders/sortByDate}" method="get">
+              <select  class="form-control" name="direction" onchange="this.form.submit()">
+                <option value="all" th:selected="${dateDirection == 'all'}">All Dates</option>
+                <option value="asc" th:selected="${dateDirection == 'asc'}">Oldest First</option>
+                <option value="desc" th:selected="${dateDirection == 'desc'}">Newest First</option>
+              </select>
+            </form>
           </div>
-        </div>
-      </form>
+      </div>
 
-      <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
-            th:action="@{/admin/orders/sortByAmount}" method="get">
-        <div class="input-group">
-          <label>Sort by Amount:</label>
-          <select  name="direction" onchange="this.form.submit()">
-            <option value="all" th:selected="${amountDirection == 'all'}">All</option>
-            <option value="asc" th:selected="${amountDirection == 'asc'}">increased</option>
-            <option value="desc" th:selected="${amountDirection == 'desc'}">decreased</option>
-          </select>
-        </div>
-      </form>
-
-      <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
-            th:action="@{/admin/orders/sortByDate}" method="get">
-        <div class="input-group">
-          <label>Sort by Date:</label>
-          <select  name="direction" onchange="this.form.submit()">
-            <option value="all" th:selected="${dateDirection == 'all'}">All</option>
-            <option value="asc" th:selected="${dateDirection == 'asc'}">increased</option>
-            <option value="desc" th:selected="${dateDirection == 'desc'}">decreased</option>
-          </select>
-        </div>
-      </form>
-
-      <!-- Hiển thị danh sách payments -->
-      <table class="table table-striped table-hover table-bordered">
+      <table th:fragment="ordersTableBody" id="ordersTableBody" class="table table-striped table-hover table-bordered">
         <thead>
         <tr>
           <th>Order ID</th>
@@ -65,21 +55,21 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="orders : ${orders}">
-          <td th:text="${orders.orderId} ?: 'N/A'"></td>
-          <td th:text="${orders.amount} ?: 'N/A'"></td>
-          <td th:text="${orders.orderType} ?: 'N/A'"></td>
-          <td th:text="${orders.status} ?: 'N/A'"></td>
-          <td th:with="formatter=${#temporals.format(orders.orderDate, 'dd/MM/yyyy HH:mm')}" th:text="${formatter}"></td>
-          <td th:text="${orders.note} ?: 'N/A'"></td>
-          <td th:text="${orders.username} ?: 'N/A'"></td>
-          <td th:text="${orders.courseNames != null && !orders.courseNames.isEmpty()} ? ${#strings.listJoin(orders.courseNames, ', ')} : 'No courses'"></td>
+        <tr th:each="order : ${orders}">
+          <td th:text="${order.orderId} ?: 'N/A'"></td>
+          <td th:text="${order.amount} ?: 'N/A'"></td>
+          <td th:text="${order.orderType} ?: 'N/A'"></td>
+          <td th:text="${order.status} ?: 'N/A'"></td>
+          <td th:with="formatter=${#temporals.format(order.orderDate, 'dd/MM/yyyy HH:mm')}" th:text="${formatter}"></td>
+          <td th:text="${order.note} ?: 'N/A'"></td>
+          <td th:text="${order.username} ?: 'N/A'"></td>
+          <td th:text="${order.courseNames != null && !order.courseNames.isEmpty()} ? ${#strings.listJoin(order.courseNames, ', ')} : 'No courses'"></td>
         </tr>
         </tbody>
       </table>
 
       <div class="clearfix">
-        <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
+        <div class="hint-text">Showing <b th:text="${orders.size()}"></b> out of <b>25</b> entries</div>
         <ul class="pagination">
           <li class="page-item disabled"><a href="#"><i class="fa fa-angle-double-left"></i></a></li>
           <li class="page-item"><a href="#" class="page-link">1</a></li>
@@ -87,11 +77,15 @@
           <li class="page-item active"><a href="#" class="page-link">3</a></li>
           <li class="page-item"><a href="#" class="page-link">4</a></li>
           <li class="page-item"><a href="#" class="page-link">5</a></li>
-          <li class="page-item"><a href="#" class="page-link"><i class="fa fa-angle-double-right"></i></a>
-          </li>
+          <li class="page-item"><a href="#" class="page-link"><i class="fa fa-angle-double-right"></i></a></li>
         </ul>
       </div>
     </div>
-    <!-- /.container-fluid -->
   </div>
+
+
 </div>
+
+
+
+
